--- a/src/public/add-player.html
+++ b/src/public/add-player.html
@@ -18,7 +18,7 @@
       <form
         id="add-player-form"
         class="space-y-4"
-        action="/api/add-player"
+        action="/api/v1/queue"
         method="POST"
       >
         <div>
@@ -43,6 +43,7 @@
           Save
         </button>
       </form>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </main>
     <footer
       class="bg-gray-800 text-white text-xs text-center py-3 bottom-0 w-full absolute"
