--- a/src/public/game.html
+++ b/src/public/game.html
@@ -74,6 +74,7 @@
           -
         </button>
       </div>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </main>
     <footer
       class="bg-gray-800 text-white text-xs text-center py-3 bottom-0 w-full absolute"
